RESOLVED FIXED312623
[Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/flex-minimum-height-flex-items-029.html
https://bugs.webkit.org/show_bug.cgi?id=312623
Summary [Flex] Fix imported/w3c/web-platform-tests/css/css-flexbox/flex-minimum-heigh...
alan
Reported 2026-04-17 20:02:13 PDT
ssia
Attachments
Patch (5.82 KB, patch)
2026-04-17 20:05 PDT, alan
no flags
[fast-cq]Patch (10.55 KB, patch)
2026-04-20 11:41 PDT, alan
no flags
alan
Comment 1 2026-04-17 20:05:26 PDT
alan
Comment 2 2026-04-20 11:41:30 PDT
Created attachment 479219 [details] [fast-cq]Patch
EWS
Comment 3 2026-04-20 14:38:56 PDT
Committed 311623@main (adeb98dd2acd): <https://commits.webkit.org/311623@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 479219 [details].
Radar WebKit Bug Importer
Comment 4 2026-04-20 14:39:12 PDT
Note You need to log in before you can comment on or make changes to this bug.